# vegetation

./: README.md  veg_detection.tif
src/: CMakeLists.txt  main.cpp  main.cu  preprocess.py  run.sh
